--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,4 +2,6 @@
 
 <% @merchant.each do |merchant| %>
   <h3><%= merchant.name %></h3>
+  <a href=merchant_items_path(merchant.id)>Items</a>
+  <a href=merchant_invoice_path(merchant.id)>Invoices</a>
 <% end %>
