--- a/app/views/admin/merchants/show.html.erb
+++ b/app/views/admin/merchants/show.html.erb
@@ -1,1 +1,2 @@
-<h1><%= @merchant.name %></h1>
+<h1>Admin Merchant: <%= @merchant.name %></h1>
+<%= link_to "Update #{@merchant.name}", "/admin/merchants/#{@merchant.id}/edit" %>
