--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Admin Merchants</h1>
 <% @merchants.each do |merchant| %>
-<%= merchant.name  %><br>
+<%= link_to "#{@merchant.name}", "/admin/merchants/#{@merchant.id}"  %>
+<br>
 <% end %>
