--- a/app/views/admin/merchants/show.html.erb
+++ b/app/views/admin/merchants/show.html.erb
@@ -1,2 +1,7 @@
 <h1>Admin Merchant: <%= @merchant.name %></h1>
-<%= link_to "Update #{@merchant.name}", "/admin/merchants/#{@merchant.id}/edit" %>
+<% if success.present? %>
+  <p class="alert alert-success"><%= success %></p>
+<% end %>
+<%= error %>
+<br>
+<%= link_to "Update #{@merchant.name}", "/admin/merchants/#{@merchant.id}/edit", method: :get %>
