--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -1,5 +1,13 @@
 <h1>Admin Merchants</h1>
 <% @merchants.each do |merchant| %>
-<%= link_to "#{@merchant.name}", "/admin/merchants/#{@merchant.id}"  %>
+<%= link_to "#{merchant.name}", "/admin/merchants/#{merchant.id}"  %>
+<% merchant.enabled %>
+  <% if merchant.enabled == true %>
+      Enabled
+    <%= button_to "Disable #{merchant.name}", "/admin/merchants/#{merchant.id}", params:{enabled: false} %>
+  <% else merchant.enabled == false %>
+      Disabled
+    <%= button_to "Enable #{merchant.name}", "/admin/merchants/#{merchant.id}", params:{enabled: true}  %>
+  <% end %>
 <br>
 <% end %>
