--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,7 +2,7 @@
 
   <h3><%= @merchant.name %></h3>
   <a href=merchant_items_path(merchant.id)>Items</a>
-  <a href=merchant_invoice_path(merchant.id)>Invoices</a>
+  <%= link_to "Invoices", "/merchants/#{@merchant.id}/invoices" %>
 
 <h2>Top 5 Customers</h2>
 <% @merchant.top_five_customers.each do |customer| %>
