--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -5,3 +5,5 @@
 <h3>Date Created: <%= @invoice.convert_time %></h3>
 
 <h3>Customer Name: <%= @customer.first_name %> <%= @customer.last_name %></h3>
+
+<h1><%= @.name %></h1>
