--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -1,5 +1,16 @@
 <h1>Admin Merchants</h1>
 <%= link_to "Create Merchant", "/admin/merchants/new" %>
+<br>
+<br>
+<div class="revenue">
+<h2>Top 5 Merchants</h2>
+<% @top_5.each do |merchant| %>
+  <%= link_to "#{merchant.name}", "/admin/merchants/#{merchant.id}"  %>
+  <%= merchant.revenue %>
+  <br>
+<% end %>
+</div>
+
 <div class="enabled">
   <h2> Enabled Merchants </h2>
   <% @merchants.group_by_enabled.each do |merchant| %>
