--- a/app/views/merchant/invoices/show.html.erb
+++ b/app/views/merchant/invoices/show.html.erb
@@ -4,15 +4,15 @@
 
 <h3>Date Created: <%= @invoice.convert_time %></h3>
 
-<h3>Customer Name: <%= @customer.first_name %> <%= @customer.last_name %></h3>
+<h3>Customer Name: <%= @invoice.customer.first_name %> <%= @invoice.customer.last_name %></h3>
 
 <h1>Items</h1>
 
-<% @invoice_items.each do |invoice_item| %>
-  <% if invoice_item.item.merchant == @merchant %>
+<% @invoice.invoice_items.each do |invoice_item| %>
     <p><%= invoice_item.item.name %></p>
     <p><%= invoice_item.quantity %></p>
     <p><%= invoice_item.unit_price %></p>
     <p><%= invoice_item.status %></p>
   <% end %> 
-<% end %>
+
+<h1>Total Revenue: $<%= @invoice.total_revenue %></h1>
