--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -7,6 +7,7 @@
 <% @top_5.each do |merchant| %>
   <%= link_to "#{merchant.name}", "/admin/merchants/#{merchant.id}"  %>
   <%= merchant.revenue %>
+  <%= merchant.best_day %>
   <br>
 <% end %>
 </div>
