--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,4 @@
 <h1> Welcome to the littlest esty shop </h1>
+
+<p><%= "Date joined github: #{@github_info.date_joined}" %></p>
+<p><%= "Your name: #{@github_info.name}" %></p>
